--- a/Blog.WEB/Properties/launchSettings.json
+++ b/Blog.WEB/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:58726/",
+      "applicationUrl": "http://localhost:58738/",
       "sslPort": 0
     }
   },
@@ -15,13 +15,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Blog": {
+    "Blog.WEB": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:58727"
+      "applicationUrl": "http://localhost:58739"
     }
   }
 }
