--- a/Blog.WEB/bower.json
+++ b/Blog.WEB/bower.json
@@ -7,7 +7,8 @@
     "jquery-validation-unobtrusive": "3.2.6",
     "DataTables": "RELEASE_1_9_4",
     "bootstrap": "v4.0.0-alpha.5",
-    "tinymce": "4.6.1"
+    "tinymce": "4.6.1",
+    "font-awesome": "Font-Awesome#v4.7.0"
   },
   "resolutions": {
     "jquery": ">= 1.7.2",
